@@ -1,54 +1,48 @@
 package evalRPN;
-import java.util.Stack; 
+
+import java.util.Stack;
+
 public class EvalRPN {
-
-	/**
-	 * @param args
+	/*
+	 * Evaluate the value of an arithmetic expression in Reverse Polish
+	 * Notation.
+	 * 
+	 * Valid operators are +, -, *, /. Each operand may be an integer or another
+	 * expression.
+	 * 
+	 * Some examples: ["2", "1", "+", "3", "*"] -> ((2 + 1) * 3) -> 9 ["4",
+	 * "13", "5", "/", "+"] -> (4 + (13 / 5)) -> 6
 	 */
-//	Evaluate the value of an arithmetic expression in Reverse Polish Notation.
-//
-//	Valid operators are +, -, *, /. Each operand may be an integer or another expression.
-//
-//	Some examples:
-//	  ["2", "1", "+", "3", "*"] -> ((2 + 1) * 3) -> 9
-//	  ["4", "13", "5", "/", "+"] -> (4 + (13 / 5)) -> 6
-	
-	//基本思路：使用栈来存放历史数据。每遇到运算符，从栈中取出两个数进行运算，将结果push入栈中。注意运算顺序。
-	//代码可以精简：String operators = "+-*/";!operators.contains(t)
 	public int evalRPN(String[] tokens) {
-        Stack<Integer> sk = new Stack<Integer>(); 
-        int first,second;
-        for(String s:tokens){
-            if(s.equals("+")){
-            	second = sk.pop();
-            	first = sk.pop();
-            	sk.push(first+second);
-            }
-            else if(s.equals("-")){
-            	second = sk.pop();
-            	first = sk.pop();
-            	sk.push(first-second);
-            }
-            else if(s.equals("*")){
-            	second = sk.pop();
-            	first = sk.pop();
-            	sk.push(first*second);
-            }
-            else if(s.equals("/")){
-            	second = sk.pop();
-            	first = sk.pop();
-            	sk.push(first/second);
-            }
-            else{
-            	sk.push(Integer.valueOf(s));
-            }
-        }
-        return sk.pop();
-    }
-	
-	public static void main(String[] args) {
-		// TODO Auto-generated method stub
+		String ops = "+-*/";
+		int result = 0;
+		Stack<Integer> stack = new Stack<Integer>();
+		for (String s : tokens) {
+			if (!ops.contains(s)) {
+				stack.push(new Integer(s));
+			} else {
+				int index = ops.indexOf(s);
+				int op2 = stack.pop();
+				int op1 = stack.pop();
+				switch (index) {
+				case 0:
+					result = op1 + op2;
+					break;
+				case 1:
+					result = op1 - op2;
+					break;
+				case 2:
+					result = op1 * op2;
+					break;
+				case 3:
+					result = op1 / op2;
+					break;
+				}
+				stack.push(result);
+			}
+		}
 
+		return stack.pop();
 	}
 
 }
